--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.40.0"
+  },
+  "dependencies": {
+    "sass": "^1.93.2",
+    "stylelint": "^16.25.0",
+    "stylelint-scss": "^6.12.1"
   }
 }
