chore: deploy businessinfinity changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "businessinfinity-asisaga",
+  "type": "module",
   "version": "1.0.0",
   "description": "Business Infinity - Frontend for the Business Infinity app",
   "scripts": {
