chore: deploy businessinfinity changes

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@playwright/test": "^1.40.0"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "sass": "^1.93.2",
     "stylelint": "^16.25.0",
     "stylelint-scss": "^6.12.1"
