--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@playwright/test": "^1.40.0"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "font-awesome": "^4.7.0",
     "sass": "^1.93.2",
     "stylelint": "^16.25.0",
