--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "type": "module",
   "version": "1.0.0",
   "description": "Business Infinity - Frontend for the Business Infinity app",
-  "scripts": {
-    "test": "playwright test",
-    "test:headed": "playwright test --headed",
-    "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug",
-    "test:report": "playwright show-report"
-  },
   "keywords": [
     "jekyll",
     "business-infinity",
@@ -17,15 +10,5 @@
     "web-components"
   ],
   "author": "ASI Saga",
-  "license": "MIT",
-  "devDependencies": {
-    "@playwright/test": "^1.40.0"
-  },
-  "dependencies": {
-    "bootstrap": "^5.3.8",
-    "font-awesome": "^4.7.0",
-    "sass": "^1.93.2",
-    "stylelint": "^16.25.0",
-    "stylelint-scss": "^6.12.1"
-  }
+  "license": "MIT"
 }
